objects/sumoapp__Process__c.object
<CustomObject>
    <fields>
        <fullName>sumoapp__AccountMatchingField__c</fullName>
        <label>Account Matching Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__AccountTypeOptions__c</fullName>
        <label>Account Type Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>MATCH_PERSON_ACCOUNT_ADVANCED</fullName>
                    <label>Match Person Account by Advanced Match</label>
                </value>
                <value>
                    <fullName>MATCH_PERSON_ACCOUNT_RULES</fullName>
                    <label>Match Person Account by Salesforce Duplicate Rules</label>
                </value>
                <value>
                    <fullName>MATCH_PERSON_ACCOUNT</fullName>
                    <default>true</default>
                    <label>Match Person Account on the following field</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__AccountsMatchOnlySumoRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accounts Match Only SUMO Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__ActivateCoHost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Co Host</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__ActivateNoHost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Host</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__ActivateUrlEncryption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encrypt URLs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__AdditionalProcess__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Additional Process</label>
        <referenceTo>sumoapp__AdditionalProcess__c</referenceTo>
        <relationshipLabel>SUMO Scheduling Processes</relationshipLabel>
        <relationshipName>SchedulingProcesses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__AdditionalSettings__c</fullName>
        <label>Additional Settings</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>RESOURCE_POOL</fullName>
                    <default>true</default>
                    <label>Resource Pool</label>
                </value>
                <value>
                    <fullName>USER_CHOOSE</fullName>
                    <label>Let User Choose</label>
                </value>
                <value>
                    <fullName>DISPLAY_ERROR</fullName>
                    <label>Display Error</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__AdvanceBookingPeriod__c</fullName>
        <defaultValue>24</defaultValue>
        <label>Advance Booking Period (hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AdvanceCancelMessage__c</fullName>
        <defaultValue>&apos;You have exceeded the time required to cancel.&apos;</defaultValue>
        <label>Advance Cancel Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__AdvanceCancelPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Advance Cancel Period (hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AdvanceRescheduleMessage__c</fullName>
        <defaultValue>&apos;You have exceeded the time required to reschedule.&apos;</defaultValue>
        <label>Advance Reschedule Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__AdvanceReschedulePeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Advance Reschedule Period (hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__AdvancedMatchType__c</fullName>
        <label>Advanced Match Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>APEX_CLASS</fullName>
                    <default>true</default>
                    <label>Apex Class</label>
                </value>
                <value>
                    <fullName>AUTOLAUNCHED_FLOW</fullName>
                    <label>Autolaunched Flow</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__AllowClientProvideHisDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Client Provide His Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__AllowPromocodes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Promocodes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__AppointmentBookedCustomerEmailTemplate__c</fullName>
        <label>Appointment Booked Email (Customer)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__AppointmentBookedCustomerSFEmailTemplate__c</fullName>
        <label>Appointment Booked Email (Customer)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__AppointmentBookedSumoUserEmailTemplate__c</fullName>
        <label>Appointment Booked Email (SUMO User)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__AppointmentCanceledEmailTemplate__c</fullName>
        <label>Appointment Canceled Email Template</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__AppointmentReminderCustomerEmailTemplate__c</fullName>
        <label>Appointment Reminder Template (Customer)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__AppointmentReminderEmailTemplate__c</fullName>
        <label>Appointment Reminder Template (Host)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__AppointmentUpdateCustomerSFEmailTemplate__c</fullName>
        <label>Appointment Updated Email (Customer)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__ApptCanceledCustomerSFEmailTemplate__c</fullName>
        <label>Appointment Canceled Email (Customer)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__ApptEventBookedSumoUserSFEmailTemplate__c</fullName>
        <label>Appointment Booked Email (SUMO User)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__ApptEventCanceledSumoUserSFEmailTemplate__c</fullName>
        <label>Appointment Canceled Email(SUMO User)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__ApptEventReminderCustomerSFEmailTemplate__c</fullName>
        <label>Appointment Reminder Email (Customer)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__ApptEventReminderSumoUserSFEmailTemplate__c</fullName>
        <label>Appointment Reminder Email (SUMO User)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__ApptEventUpdateSumoUserSFEmailTemplate__c</fullName>
        <label>Appointment Updated Email (SUMO User)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__AssignmentEngineMode__c</fullName>
        <label>Assignment Engine Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LOAD_BALANCE</fullName>
                    <default>true</default>
                    <label>Load-Balance</label>
                </value>
                <value>
                    <fullName>ROUND_ROBIN</fullName>
                    <label>Round-Robin</label>
                </value>
                <value>
                    <fullName>RANDOM</fullName>
                    <label>Random</label>
                </value>
                <value>
                    <fullName>PRIORITY_BASED</fullName>
                    <label>Priority Based</label>
                </value>
                <value>
                    <fullName>USER_CHOOSE</fullName>
                    <label>User Choose</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__AssignmentRuleScope__c</fullName>
        <label>Assignment Rule Scope</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>sumoapp__AssignmentRuleScope</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__AutoChangeCaseOwner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Change Case Owner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__AvailabilityOptions__c</fullName>
        <label>Availability Options</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>OPEN</fullName>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>CUSTOM</fullName>
                    <label>Custom</label>
                </value>
                <value>
                    <fullName>ROLLING_WINDOW</fullName>
                    <label>Rolling Window</label>
                </value>
                <value>
                    <fullName>DATE_RANGE</fullName>
                    <label>Date Range</label>
                </value>
                <value>
                    <fullName>TRAVEL_TIME_GAP</fullName>
                    <label>Buffer Time</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__AvailableTimezones__c</fullName>
        <label>Available Timezones</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__BackgroundImage__c</fullName>
        <label>Background Image</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__BasicCss__c</fullName>
        <defaultValue>&apos;{&quot;primaryColor&quot;:&quot;#4A90E2&quot;,&quot;buttonsColor&quot;:&quot;#4A90E3&quot;,&quot;backgroundColor&quot;:&quot;#EAEAEA&quot;,&quot;headerColor&quot;:&quot;#4A90E2&quot;,&quot;subHeaderColor&quot;:&quot;#4A90E2&quot;,&quot;mainTextColor&quot;:&quot;#9B9B9B&quot;,&quot;headerFont&quot;:&quot;Salesforce Sans&quot;,&quot;subHeaderFont&quot;:&quot;Salesforce Sans&quot;,&quot;mainTextFont&quot;:&quot;Salesforce Sans&quot;,&quot;primaryColorLighter&quot;:&quot;#59adff&quot;,&quot;buttonsColorDarker&quot;:&quot;#3b73b6&quot;}&apos;</defaultValue>
        <label>Basic CSS</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__BlacklistMessage__c</fullName>
        <label>Blacklist Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__Blacklist__c</fullName>
        <label>Blacklist</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__BookedConfirmationNum__c</fullName>
        <label>Booked Confirmation #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__BookedDateTimeLabel__c</fullName>
        <label>Booked Date/Time Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__BookedLocationDetailsLabel__c</fullName>
        <label>Booked Location Details Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__BookedLocationLabel__c</fullName>
        <label>Booked Location Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__BookedNameLabel__c</fullName>
        <label>Booked Name Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__BookedPaymentReceived__c</fullName>
        <label>Booked Payment Received</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__BookedRegistrationComplited__c</fullName>
        <label>Booked Registration Complited</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__BookedRichText__c</fullName>
        <label>Booked Rich Text</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>sumoapp__BookedSubHeader__c</fullName>
        <label>Booked Sub-Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__BookedWhenLabel__c</fullName>
        <label>Booked When</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__CalendarType__c</fullName>
        <label>Calendar Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DAY_VIEW</fullName>
                    <default>true</default>
                    <label>Day View</label>
                </value>
                <value>
                    <fullName>WEEK_VIEW</fullName>
                    <label>Week View</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__CancelFromReminder__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cancel From Email Reminder</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__Captcha__c</fullName>
        <label>Captcha</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__CategorySubHeader__c</fullName>
        <label>Category Sub-Header</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__CompoundEventFormFields__c</fullName>
        <label>Compound Event Form Fields</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ContactFormFields__c</fullName>
        <label>Contact Form Fields</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ContactMatchingField__c</fullName>
        <label>Contact Matching Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__ContactSubHeader__c</fullName>
        <label>Contact Sub-Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__ContactTypeOptions__c</fullName>
        <label>Contact Type Options</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>MATCH_CONTACT_ADVANCED</fullName>
                    <label>Match Contact by Advanced Match</label>
                </value>
                <value>
                    <fullName>MATCH_CONTACT_RULES</fullName>
                    <label>Match Contact by Salesforce Duplicate Rules</label>
                </value>
                <value>
                    <fullName>MATCH_CONTACT</fullName>
                    <default>true</default>
                    <label>Match Contact on the following field</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__ContactsMatchOnlySumoRecords__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contacts Match Only on SUMO Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__ContextUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Context User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Context Users</relationshipLabel>
        <relationshipName>ContextUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__ContextUsername__c</fullName>
        <label>Context Username</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__CountryCode__c</fullName>
        <label>Country Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia, Plurinational State of</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botswana</label>
                </value>
                <value>
                    <fullName>BV</fullName>
                    <label>Bouvet Island</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__DaysBeforeDefaultExpirationDate__c</fullName>
        <defaultValue>7</defaultValue>
        <label>Days Before Default Expiration Date</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__DeclineMessageForPaidEvent__c</fullName>
        <defaultValue>&apos;We are unable to process your request for this paid event. Please contact your Event Coordinator for more information.&apos;</defaultValue>
        <description>The message describption about block decline for paid events</description>
        <inlineHelpText>Decline Message for Paid Events</inlineHelpText>
        <label>Decline Message for Paid Event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DeclinedConfirmationNumberLabel__c</fullName>
        <label>Declined Confirmation #</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DeclinedLocationDetailsLabel__c</fullName>
        <label>Declined Location Details Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DeclinedLocationLabel__c</fullName>
        <label>Declined Location Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DeclinedNameLabel__c</fullName>
        <label>Declined Name Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DeclinedSubHeaderLabel__c</fullName>
        <label>Declined Sub-Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DeclinedWhenLabel__c</fullName>
        <label>Declined When</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DefaultCategory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Category</label>
        <referenceTo>sumoapp__Category__c</referenceTo>
        <relationshipLabel>Default Categories</relationshipLabel>
        <relationshipName>DefaultCategories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__DefaultCreateMatch__c</fullName>
        <label>Default Create/Match</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>LEADS</fullName>
                    <label>Leads</label>
                </value>
                <value>
                    <fullName>BUSINESS_CONTACTS</fullName>
                    <label>Contacts</label>
                </value>
                <value>
                    <fullName>PERSON_ACCOUNTS</fullName>
                    <label>Accounts</label>
                </value>
                <value>
                    <fullName>Account</fullName>
                    <isActive>false</isActive>
                    <label>Account</label>
                </value>
                <value>
                    <fullName>Contact</fullName>
                    <isActive>false</isActive>
                    <label>Contact</label>
                </value>
                <value>
                    <fullName>Lead</fullName>
                    <isActive>false</isActive>
                    <label>Lead</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__DefaultLocationOption__c</fullName>
        <label>Default Location Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PHONE</fullName>
                    <label>Phone</label>
                </value>
                <value>
                    <fullName>VID_CONFERENCE</fullName>
                    <label>Video Conference</label>
                </value>
                <value>
                    <fullName>IN_PERSON</fullName>
                    <label>In Person</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__DefaultService__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Service</label>
        <referenceTo>sumoapp__Service__c</referenceTo>
        <relationshipLabel>Default Services</relationshipLabel>
        <relationshipName>DefaultServices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__DefaultSumoUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default SUMO User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Default Sumo Users</relationshipLabel>
        <relationshipName>DefaultSumoUsers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sumoapp__DefaultTimezone__c</fullName>
        <label>Default Timezone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__DirectionsLabel__c</fullName>
        <label>Directions Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DisclaimerTextArea__c</fullName>
        <label>Disclaimer Text Area</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DisclaimerText__c</fullName>
        <label>Disclaimer Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DisplayErrorCustomMessage__c</fullName>
        <label>Display Error Custom Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__DynamicTravelTimeStrategy__c</fullName>
        <description>An indicator on the Template level to know if dynamic time calculation is active or not</description>
        <label>Is Dynamic Travel Time Calc Activated?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DISABLED</fullName>
                    <default>true</default>
                    <label>Do not calculate Travel Time (Optional: You may use Buffer Time if configured)</label>
                </value>
                <value>
                    <fullName>LICENSED_USERS</fullName>
                    <label>Calc Travel Time for any users who have Field Sales License (and exclude non field-sales users)</label>
                </value>
                <value>
                    <fullName>ALL_USERS</fullName>
                    <label>Calc Travel Time for any users who have Field Sales License (and include non field-sales users)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sumoapp__EDDateTimeLabel__c</fullName>
        <label>Event Detail Date/Time Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EDDescriptionLabel__c</fullName>
        <label>Event Detail Description Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EDLocationDetailsLabel__c</fullName>
        <label>Event Detail Location Details Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EDLocationsLabel__c</fullName>
        <label>Event Detail Locations Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EDNumOfSeatsLabel__c</fullName>
        <label>Event Detail # of seats Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EDPriceLabel__c</fullName>
        <label>Event Detail Price Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EDSpacesLabel__c</fullName>
        <label>Event Detail Spaces Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EDSubHeader__c</fullName>
        <label>Event Detail Sub Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EmbedCodeInBody__c</fullName>
        <label>Embed Code in Body</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EmbedCodeInHeader__c</fullName>
        <label>Embed Code in Header</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EnablePersonalAccount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Personal Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__EventCanceledCustomerEmailTemplate__c</fullName>
        <label>Event Canceled Template (Customer)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__EventDeclinedCustomerEmailTemplate__c</fullName>
        <label>Event Declined Template (Customer)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__EventEditPageCustomFields__c</fullName>
        <label>Event Edit Page Custom Fields</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EventTypes__c</fullName>
        <label>Event Types</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__EventUpdatedCustomerEmailTemplate__c</fullName>
        <label>Event Updated Template (Customer)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__EventUpdatedSumoUserEmailTemplate__c</fullName>
        <label>Event Updated Template (Host)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__EventViewPageCustomFields__c</fullName>
        <label>Event View Page Custom Fields</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__FlowLastScreenName__c</fullName>
        <label>Last Name Of Flow Screen</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__FlowName__c</fullName>
        <label>Name Of Flow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sumoapp__FooterTextArea__c</fullName>
        <defaultValue>&apos;Powered by &lt;a href=&quot;https://www.sumoscheduler.com/&quot; target=&quot;_blank&quot;&gt;SumoScheduler.com&lt;/a&gt;&apos;</defaultValue>
        <label>Footer Text</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__FurthestBookingPeriod__c</fullName>
        <defaultValue>720</defaultValue>
        <label>Furthest Booking Period (hours)</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sumoapp__GlobalHeaderLabel__c</fullName>
        <label>Global Header Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sumoapp__HideInternalEmailsByDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls default value of ShowInternalEmails__c field on SUMO Event and Invite</description>
        <label>Disable Show Internal Emails By Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__HideResources__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Resources</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__HideRooms__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Rooms</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__HideSlotWhenContactBooked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Appointment Slot</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sumoapp__IfContactIdIsPassed__c</fullName>
        <label>If CONTACT ID is passed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SKIP_CONTACT_PAGE</fullName>
                    <default>true</default>
                    <label>Skip the Contact Page</label>
                </value>
                <value>
                    <fullName>PRE_POPULATE_PAGE</fullName>
                    <label>Pre-Populate the Page</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>